--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="https://aksingh45.github.io/bharat-intern/temperature/index.html">temperature converter</a></br>
+    <a href="https://aksingh45.github.io/bharat-intern/temperature/index.html">temperature converter</a><br>
     <a href="https://aksingh45.github.io/bharat-intern/netflix/index.html">netflix homepage</a>
 </body>
 
